test/tests/stages/8_loops/valid/extra_credit/goto_bypass_init_exp.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[45]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(i)
  =
  const int(0)
  ;
  goto
  identifier(target)
  ;
  for
  (
  identifier(i)
  =
  const int(5)
  ;
  identifier(i)
  <
  const int(10)
  ;
  identifier(i)
  =
  identifier(i)
  +
  const int(1)
  )
  identifier(target)
  :
  if
  (
  identifier(i)
  ==
  const int(0)
  )
  return
  const int(1)
  ;
  return
  const int(0)
  ;
  }
