test/tests/stages/8_loops/invalid_semantics/extra_credit/case_outside_switch.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[35]:
  int
  identifier(main)
  (
  void
  )
  {
  for
  (
  int
  identifier(i)
  =
  const int(0)
  ;
  identifier(i)
  <
  const int(10)
  ;
  identifier(i)
  =
  identifier(i)
  +
  const int(1)
  )
  {
  case
  const int(0)
  :
  return
  const int(1)
  ;
  }
  return
  const int(9)
  ;
  }
